# cap-vlm

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  sft.yaml  stage1.yaml  stage2.yaml
ppv/: __init__.py
ppv/evaluation/: __init__.py  agentic.py  intrinsic.py  metrics.py
ppv/models/: __init__.py  config.py  vlm_wrapper.py
ppv/synthesis/: __init__.py  annotator.py  apc_synthesizer.py  base.py  hvc_synthesizer.py  vstp_synthesizer.py
ppv/training/: __init__.py  config.py  cpt_trainer.py  lr_schedule.py
scripts/: evaluate.py  synthesize.py  train.py
tests/: test_data.py  test_synthesis.py  test_training.py
